# swarm

./: Cargo.toml  LICENSE  README.md
docs/: index.html
docs/pkg/: package.json  swarm_web.d.ts  swarm_web.js  swarm_web_bg.wasm  swarm_web_bg.wasm.d.ts
src/: download.rs  main.rs  metainfo.rs  peer.rs  sha1.rs  sim.rs  tracker.rs  tui.rs
web/: Cargo.toml
web/src/: bencode.rs  lib.rs
